packages/dockview-core/src/dockview/dockviewComponent.scss
.dv-dockview {
    position: relative;
    background-color: var(--dv-group-view-background-color);
    contain: layout;

    .dv-watermark-container {
        position: absolute;
        top: 0px;
        left: 0px;
        height: 100%;
        width: 100%;
        z-index: 1;
    }

    .dv-overlay-render-container {
        position: relative;
    }
}

.dv-groupview {
    &.dv-active-group {
        > .dv-tabs-and-actions-container {
            .dv-tabs-container > .dv-tab {
                &.dv-active-tab {
                    background-color: var(
                        --dv-activegroup-visiblepanel-tab-background-color
                    );
                    color: var(--dv-activegroup-visiblepanel-tab-color);
                }
                &.dv-inactive-tab {
                    background-color: var(
                        --dv-activegroup-hiddenpanel-tab-background-color
                    );
                    color: var(--dv-activegroup-hiddenpanel-tab-color);
                }
            }
        }
    }
    &.dv-inactive-group {
        > .dv-tabs-and-actions-container {
            .dv-tabs-container > .dv-tab {
                &.dv-active-tab {
                    background-color: var(
                        --dv-inactivegroup-visiblepanel-tab-background-color
                    );
                    color: var(--dv-inactivegroup-visiblepanel-tab-color);
                }
                &.dv-inactive-tab {
                    background-color: var(
                        --dv-inactivegroup-hiddenpanel-tab-background-color
                    );
                    color: var(--dv-inactivegroup-hiddenpanel-tab-color);
                }
            }
        }
    }
}

/**
 * when a tab is dragged we lose the above stylings because they are conditional on parent elements
 * therefore we also set some stylings for the dragging event
 **/
.dv-tab {
    &.dv-tab-dragging {
        background-color: var(
            --dv-activegroup-visiblepanel-tab-background-color
        );
        color: var(--dv-activegroup-visiblepanel-tab-color);
    }
}

